--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -167,3 +167,43 @@ a:active {
     border: 1px solid rgb(118, 118, 118);
     background-color: rgb(230, 155, 130);
 }
+
+
+/* For Dropdown */
+
+.dropdown {
+    position: relative;
+    display: block;
+    display: inline;
+    color: #ffffff;
+    background-color: rgb(23, 26, 26);
+    text-align: center;
+    padding: 5px 20px 5px 20px;
+    margin: 1% 0.15% 1% 0.15%;
+    text-decoration: none;
+    border: 2px solid rgb(8, 8, 8);
+    border-radius: 5px;
+}
+
+.dropdown-content {
+    display: none;
+    position: fixed;
+    margin-top: 10px;
+    margin-left: -30px;
+    background-color: #201f1f;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.show {
+    display: block;
+}
